Fix call top button z-index in speaker mode

--- a/stylesheets/_modules.scss
+++ b/stylesheets/_modules.scss
@@ -3723,7 +3723,7 @@ button.module-image__border-overlay:focus {
     background: linear-gradient($color-black-alpha-40, transparent);
     top: 0;
     width: 100%;
-    z-index: $z-index-above-base;
+    z-index: $z-index-above-above-base;
     -webkit-app-region: drag;
   }
 
@@ -3743,6 +3743,7 @@ button.module-image__border-overlay:focus {
     display: flex;
     flex: 1 1 0;
     width: 100%;
+    z-index: $z-index-above-base;
 
     &__grid {
       flex-grow: 1;
