--- a/stylesheets/components/CallingButton.scss
+++ b/stylesheets/components/CallingButton.scss
@@ -149,6 +149,7 @@
     padding-block: 5px;
     padding-inline: 12px;
     filter: drop-shadow(0px 4px 3px $color-black-alpha-20);
+    pointer-events: none;
   }
 
   &__tooltip .module-tooltip-arrow::before {
